ModuleEntry::is_non_jdk_module() determination for what is a jdk module is incorrect

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 11
    • Affects Version/s: 11
    • Component/s: hotspot
    • None
    • b19

        How a module is determined to be a JDK module within the VM needs to be reworked given that for example, java.corba and jdk.scripting.nashorn.shell are no longer considered part of the JDK. Currently any unnamed module or named module whose location is "jrt:/java." or "jrt:/jdk." does not have the "@version_string appended to the end of the module's name. ModuleEntry::is_non_jdk_module needs to be reworked.

              Assignee:
              Harold Seigel (Inactive)
              Reporter:
              Lois Foltan
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: