8204620: ModuleEntry::is_non_jdk_module() determination for what is a jdk module is incorrect

Check module's loader and compare version with java.base's version to improve algorithm

Reviewed-by: lfoltan, mchung